syntax = "proto3";
package rmsv2.audiostream;

message StreamRequest {
  string callLegId = 1;
  string metaData = 2;
  bytes  audioStream = 3;
}

// EchoResponse is the response for echo.
message StreamResponse {
  string message = 1;
}

service AudioStream {
  rpc ClientStreamingAudio(stream StreamRequest) returns (StreamResponse) {}
}